--- a/aws-hackathon-nodejs/package.json
+++ b/aws-hackathon-nodejs/package.json
@@ -12,6 +12,8 @@
   "dependencies": {
     "cors": "^2.8.5",
     "express": "^4.18.2",
+    "mongodb": "^5.2.0",
+    "mongoose": "^7.0.3",
     "nodemon": "^2.0.12",
     "redis": "^4.6.5",
     "socket.io": "^4.1.3"
